fix classloading images.